assets/style.css
@import url('https://fonts.googleapis.com/css?family=Quicksand:100,200,300,400,500,600,700|Roboto+Slab:100,200,300,400,500,600,700|Pacifico:100,200,300,400,500,600,700');




#my-portfolio {
    font-family: "Quicksand", sans-serif;
    font-weight: 600;  
}

a {
    font-family: "Quicksand",
        sans-serif;
    color: #7b6e5e;
    text-transform: uppercase;
    font-weight: 500;
    margin: 20px;
}

.navbar {
    border-bottom:rgb(241, 241, 241) solid;
    border-bottom-width: thin;
}


/* Begining of video background   */

#video-bkg-element {
    position: fixed;
    z-index: -10;
    width: 100%;
    height: auto;
}

@media (min-aspect-ratio: 16/9) {
    #video-bkg-element {
        width: 100%;
        height: auto;
    }
}

@media (max-aspect-ratio: 16/9) {
    #video-bkg-element {
        width: auto;
        height: 100%;
    }
}

/* End of video background   */


/* Video background content */
.center-top {
    position: absolute;
    text-align: center;
    width: auto;
    top: 38%;
    left: 50%;
    transform: translate(-50%, -50%);
}

h1 {
    font-family: "Pacifico", sans-serif;
    font-weight: 100;
    font-size: 60px;
    color: #fff;
}

p {
    font-family: "Quicksand", sans-serif;
    font-size: 15px;
    letter-spacing: 7px;
    font-weight: 200;
    color: #fff;
    text-transform: uppercase;
}

/* Enter Button */
.center-under {
    top: 50%;
    text-align: center;
    position: relative;
    border-radius: 0;
    display: table;
    margin: 0 auto;
}

.btn {
    font-family: "Quicksand", sans-serif;
    font-weight: 500;
    letter-spacing: 5px;
    color: #fafafa;
    text-transform: uppercase;
    padding: 10px 45px;
    cursor: pointer;
    transition-delay: 0.5s linear;
    border-radius: 0;
}

.btn:hover {
    color: #1f1f1fc8;
    background: #fff;
    border-radius: 0;    
}

.btn::before {
    position: absolute;
    left: 0;
    top: 0; 
}

div.btn {
    border: 2px solid #fff;
    
}
/* Enter Button ends */

/* Video background content ends */


/* Social-media icons for footer */
#social-icons {
    margin: auto;
    
}

li {
    list-style: none;
    margin: 0px 0px;
    display: inline-block;
    padding: 0;

}

ul {
    margin: 0;
    padding: 0;
}

.list-inline-icons li a i {
    font-size: 32px;
    color: #7b6e5e;
    margin-top: 30px;

}

/* Social media icons for video background page (index.html) */
.list-inline-icons-white li a i {
    font-size: 32px;
    color: #fff;
    
}
/* Social media icons for video background page ends */

@media screen and (max-width:400px) {
    .list-inline-icons-white li a i {
        font-size: 25px;      
}
}

.fixed-bottom {
    margin-bottom: 3%;
}

/* End of social-media icons for footer */


/* Gallery styling starts  */

.gallery {
    position: relative;
    margin-top: 130px;
    width: 100%;
    align-content: center;
  
}


section .gallery .row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
    
}

/* Create four equal columns that sits next to each other */
.column {
    flex: 25%;
    max-width: 50%;
    padding: 0 4px;
}

.column img {
    margin-top: 0px;
    vertical-align: middle;
    width: 100%;
}

/* Responsive layout - makes a two column-layout instead of four columns */
@media screen and (max-width: 800px) {
    .column {
        flex: 50%;
        max-width: 50%;
    }
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
    .column {
        flex: 100%;
        max-width: 100%;
    }
}
/* Gallery styling ends */


/* Form Positioning */
.col-md-6 {
    width: 100%;
    margin: 0 auto;
}

/* Form Positioning  */

/* About me Page */

#aboutme {
    margin-top: 120px;
}

h2 {
    color: #7b6e5e;
    }

    

.media-players {
    max-width: 700px;
    margin: 0 auto;

}

.about-page {
    font-family: "Roboto", sans-serif;
    font-size: 15px;
    color: #828282;
    text-transform: none;
    letter-spacing: 0px;
}

/* About me Page ends */




/* For aligning "My Interview" with screens 420px left */
@media only screen and (max-width: 420px) {
    .interviews {
        margin-left: 15px;
    }
}

#my-navbar {
    width: 100%;
}

